2010-07-29       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  tidied up newfile.
	* gm2/gm2/gm2.texi:  (New section) Exception implementation.
	* gm2/gm2-libs/Builtins.def:  added space.
	* gm2/Make-lang.in:  replaced -fcheck-all with -fsoft-check-all.
	* gm2/gm2.texi:  replaced -fcheck-all with -fsoft-check-all.
	* gm2/lang-options.h:  replaced -fcheck-all with -fsoft-check-all.
	* gm2/lang.opt:  replaced -fcheck-all with -fsoft-check-all.
	* gm2/gm2-compiler/M2Options.mod:  replaced -fcheck-all with
	  -fsoft-check-all.
	* gm2/gm2-libs/Builtins.def:  replaced -fcheck-all with -fsoft-check-all.
	* gm2/man/gm2.man:  replaced -fcheck-all with -fsoft-check-all.

2010-07-12       Gaius Mulley <gaius@gnu.org>

	* All major arrays are now dynamic within gm2.
	* gm2/gm2-libs/FIO.mod:  corrected spelling mistake.
	* gm2/gm2-compiler/SymbolTable.mod:  large number of changes
	  replacing static arrays, Symbol, and ScopeCallFrame
	  with Indexing.Index dynamic arrays.  Also fixed a number
	  of uninitialized fields in the symbol table.
	* gm2/tools-src/array2index.py:  tool used to replace the
	  static arrays with their dynamic equivalent.
	* gm2/gm2-compiler/SymbolTable.mod:  fixed another
	  uninitialised Scope field in MakeHiddenType.

2010-07-08       Gaius Mulley <gaius@gnu.org>

	* gm2/www/index.ms:  updated news of 0.92 release.
	* gm2/version.c:  updated to 0.93 now that the debian
	  0.92 has been produced.
	* gm2/gm2-libs/configure.in:  updated to 0.93.
	* gm2/gm2-libs/configure:  rebuilt.
	* gm2/gm2-compiler/M2Quads.mod:  pass ArraySym rather than
	  Sym to InitDynamicArraySubscriptRangeCheck.  Fixes a bug
	  while checking multidimensional unbounded array bounds
	  for all dimensions > 1.

2010-07-07       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/ConvStringReal.mod:  initialise offset to 0.
	* gm2/gm2-libs-iso/ConvStringLong.mod:  initialise offset to 0.
        * fixes a bug exposed by i386 bit port (and others).
