@@ -1,3 +1,13 @@
+2010-07-30       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/lang-options.h:  added -fclean as a legal option.
+	* gm2/lang-specs.h:  modified so that -fclean -fmakeall will first
+	  clean all objects and secondly build the application.
+	* gm2/lang.opt:  added -fclean as a legal option.
+	* gm2/bnf/gm2m.bnf:  added new target clean which removes all
+	  objects.
+	* gm2/gm2-compiler/M2Options.mod:  added -fclean as a legal option.
+
 2010-07-29       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/Make-lang.in:  tidied up newfile.
